# hyperon-cpp

./: .gitignore  CMakeLists.txt  ClassicSpace.h  GroundingSpace.cpp  GroundingSpace.h  MySpace.h  README.md  SimpleSpace.h  SpaceAPI.h  TextSpace.cpp  TextSpace.h
.circleci/: Dockerfile  config.yml
cpp/: CMakeLists.txt
cpp/hyperon/: CMakeLists.txt  GroundedArithmetic.h  GroundingSpace.cpp  GroundingSpace.h  TextSpace.cpp  TextSpace.h  hyperon.h  logger.cpp  logger.h  logger_priv.h
cpp/hyperon/common/: Atomese.cpp  Atomese.h  CMakeLists.txt  Interpret.cpp  Interpret.h  common.h
cpp/tests/: CMakeLists.txt  GroundedArithmetic.cpp  GroundedArithmetic.h  GroundedArithmeticTest.h  GroundedLogic.cpp  GroundedLogic.h  GroundedSymbolTest.h  GroundingSpaceTest.h  TextSpaceTest.h  common.h
cpp/tests/hyperon/: CMakeLists.txt  GroundingSpaceTest.h  TextSpaceTest.h
cpp/tests/hyperon/common/: CMakeLists.txt  GroundedArithmeticTest.h
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
python/: CMakeLists.txt  hyperonpy.cpp
python/hyperon/: __init__.py
python/tests/: CMakeLists.txt  common.py  test_api.py  test_examples.py  test_kb.py  test_matching.py  test_minecraft.py  test_smart_home.py  test_unification.py
tests/: CMakeLists.txt  GroundedSymbolTest.h  GroundingSpaceTest.h  TextSpaceTest.h
version1/: CMakeLists.txt
version1/examples/: CMakeLists.txt  example1.cpp
