CMAKE_MINIMUM_REQUIRED(VERSION 2.88)

PROJECT(space)

FIND_PACKAGE(CogUtil REQUIRED)
FIND_PACKAGE(AtomSpace REQUIRED)
FIND_PACKAGE(CxxTest REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${COGUTIL_INCLUDE_DIR}
	${ATOMSPACE_INCLUDE_DIR})

ADD_SUBDIRECTORY(examples)
ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
