CMAKE_MINIMUM_REQUIRED(VERSION 2.88)

PROJECT(space)
SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE(CogUtil REQUIRED)
FIND_PACKAGE(AtomSpace REQUIRED)
FIND_PACKAGE(CxxTest REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
    ${COGUTIL_INCLUDE_DIR} ${ATOMSPACE_INCLUDE_DIR})

ADD_LIBRARY(hyperon SHARED GroundingSpace.cpp TextSpace.cpp)

ADD_SUBDIRECTORY(version1)
ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
