CMAKE_MINIMUM_REQUIRED(VERSION 2.88)

PROJECT(hyperon)
SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(hyperon SHARED GroundingSpace.cpp TextSpace.cpp)

ENABLE_TESTING()
ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)
ADD_SUBDIRECTORY(tests)

ADD_SUBDIRECTORY(python)

INSTALL(TARGETS
    hyperon)

INSTALL(FILES
    SpaceAPI.h
    GroundingSpace.h
    TextSpace.h
    DESTINATION "include/hyperon")
