FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(pybind11 REQUIRED)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE(FindPythonInstallPrefix)

PYBIND11_ADD_MODULE(hyperonpy hyperonpy.cpp)
TARGET_LINK_LIBRARIES(hyperonpy PRIVATE hyperon)

SET(PYTHONPATH "${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_CURRENT_SOURCE_DIR}")
ADD_SUBDIRECTORY(tests)

INSTALL(TARGETS
    hyperonpy
    DESTINATION "${PYTHON_INSTALL_PREFIX}")

INSTALL(FILES
    hyperon/__init__.py
    DESTINATION "${PYTHON_INSTALL_PREFIX}/hyperon")
